crates/squawk_parser/tests/snapshots/tests__drop_trigger_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_trigger.sql
---
SOURCE_FILE
  DROP_TRIGGER
    DROP_KW "drop"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    TRIGGER_REF
      IDENT "tr"
    WHITESPACE " "
    ON_RELATION
      ON_KW "on"
      WHITESPACE " "
      RELATION_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_TRIGGER
    DROP_KW "drop"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    TRIGGER_REF
      IDENT "tr"
    WHITESPACE " "
    ON_RELATION
      ON_KW "on"
      WHITESPACE " "
      RELATION_NAME_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "bar"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_TRIGGER
    DROP_KW "drop"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TRIGGER_REF
      IDENT "tr"
    WHITESPACE " "
    ON_RELATION
      ON_KW "on"
      WHITESPACE " "
      RELATION_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_TRIGGER
    DROP_KW "drop"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TRIGGER_REF
      IDENT "tr"
    WHITESPACE " "
    ON_RELATION
      ON_KW "on"
      WHITESPACE " "
      RELATION_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE " "
    CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_TRIGGER
    DROP_KW "drop"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    TRIGGER_REF
      IDENT "tr"
    WHITESPACE " "
    ON_RELATION
      ON_KW "on"
      WHITESPACE " "
      RELATION_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE " "
    RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
