crates/squawk_parser/tests/snapshots/tests__drop_type_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_type.sql
---
SOURCE_FILE
  COMMENT "-- drop_type"
  WHITESPACE "\n"
  DROP_TYPE
    DROP_KW "drop"
    WHITESPACE " "
    TYPE_KW "type"
    WHITESPACE " "
    TYPE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_TYPE
    DROP_KW "drop"
    WHITESPACE " "
    TYPE_KW "type"
    WHITESPACE " "
    TYPE_NAME_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_TYPE
    DROP_KW "drop"
    WHITESPACE " "
    TYPE_KW "type"
    WHITESPACE " "
    TYPE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "a"
    COMMA ","
    WHITESPACE " "
    TYPE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "b"
    COMMA ","
    WHITESPACE " "
    TYPE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_TYPE
    DROP_KW "drop"
    WHITESPACE " "
    TYPE_KW "type"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TYPE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "a"
    COMMA ","
    WHITESPACE " "
    TYPE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "b"
    COMMA ","
    WHITESPACE " "
    TYPE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_TYPE
    DROP_KW "drop"
    WHITESPACE " "
    TYPE_KW "type"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TYPE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "a"
    WHITESPACE " "
    CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_TYPE
    DROP_KW "drop"
    WHITESPACE " "
    TYPE_KW "type"
    WHITESPACE " "
    TYPE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "a"
    WHITESPACE " "
    RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_TYPE
    DROP_KW "drop"
    WHITESPACE " "
    TYPE_KW "type"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TYPE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "foo"
    SEMICOLON ";"
  WHITESPACE "\n\n\n"
