crates/squawk_parser/tests/snapshots/tests__drop_user_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_user.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_USER
    DROP_KW "drop"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "foo"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_USER
    DROP_KW "drop"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "a"
    COMMA ","
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "b"
    COMMA ","
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "c"
    SEMICOLON ";"
  WHITESPACE "\n\n"
