crates/squawk_parser/tests/snapshots/tests__drop_view_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_view.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  DROP_VIEW
    DROP_KW "DROP"
    WHITESPACE " "
    VIEW_KW "VIEW"
    WHITESPACE " "
    VIEW_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "kinds"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_VIEW
    DROP_KW "drop"
    WHITESPACE " "
    VIEW_KW "view"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    VIEW_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "foo"
    COMMA ","
    WHITESPACE " "
    VIEW_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "bar"
    COMMA ","
    WHITESPACE " "
    VIEW_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "buzz"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_VIEW
    DROP_KW "drop"
    WHITESPACE " "
    VIEW_KW "view"
    WHITESPACE " "
    VIEW_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "foo"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
