crates/squawk_parser/tests/snapshots/tests__execute_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/execute.sql
---
SOURCE_FILE
  COMMENT "-- execute"
  WHITESPACE "\n"
  EXECUTE
    EXECUTE_KW "EXECUTE"
    WHITESPACE " "
    PREPARED_STATEMENT_REF
      IDENT "fooplan"
    ARG_LIST
      L_PAREN "("
      ARG
        LITERAL
          INT_NUMBER "1"
      COMMA ","
      WHITESPACE " "
      ARG
        LITERAL
          STRING "'Hunter Valley'"
      COMMA ","
      WHITESPACE " "
      ARG
        LITERAL
          STRING "'t'"
      COMMA ","
      WHITESPACE " "
      ARG
        LITERAL
          NUMERIC_NUMBER "200.00"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  EXECUTE
    EXECUTE_KW "EXECUTE"
    WHITESPACE " "
    PREPARED_STATEMENT_REF
      IDENT "usrrptplan"
    ARG_LIST
      L_PAREN "("
      ARG
        LITERAL
          INT_NUMBER "1"
      COMMA ","
      WHITESPACE " "
      ARG
        NAME_REF
          CURRENT_DATE_KW "current_date"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  EXECUTE
    EXECUTE_KW "EXECUTE"
    WHITESPACE " "
    PREPARED_STATEMENT_REF
      IDENT "foo"
    SEMICOLON ";"
  WHITESPACE "\n\n"
