crates/squawk_parser/tests/snapshots/tests__listen_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/listen.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  LISTEN
    LISTEN_KW "listen"
    WHITESPACE " "
    CHANNEL
      NAME
        IDENT "foo"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  LISTEN
    LISTEN_KW "LISTEN"
    WHITESPACE " "
    CHANNEL
      NAME
        VIRTUAL_KW "virtual"
    SEMICOLON ";"
  WHITESPACE "\n\n"
